fixed image overlap in header.css

--- a/blocks/header.css
+++ b/blocks/header.css
@@ -8,6 +8,7 @@
   min-height: 720px;
   max-height: 800px;
   height: 100vh;
+  z-index: 1;
 }
 .header__title {
   margin-top: 202px;
@@ -42,6 +43,7 @@
   position: absolute;
   top: 124px;
   right: 5px;
+  z-index: -1;
 }
 .header__footer {
   display: flex;
